Fix spacing on clear button and X button on the Reload Case form
Jira ticket: CAMS-647

--- a/user-interface/src/admin/case-reload/CaseReload.scss
+++ b/user-interface/src/admin/case-reload/CaseReload.scss
@@ -35,9 +35,5 @@
         margin-top: 0;
       }
     }
-
-    button {
-      margin-top: 1rem;
-    }
   }
 }
